# django-pages-module

./: MENIFEST.in  apps.py  models.py  pyproject.toml  readme.rst  urls.py  views.py
migrations/: 0001_initial.py
src/mayacms/contrib/pages/: __init__.py  admin.py  apps.py  models.py  seeders.py  urls.py  views.py
src/mayacms/contrib/pages/migrations/: 0001_initial.py  0002_run_seeders.py
src/mayacms/contrib/pages/templates/pages/: view.html
